[gd_scene load_steps=8 format=2]

[ext_resource path="res://fonts/Roboto/Roboto-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://fonts/Roboto/Roboto-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/DificultadScene.gd" type="Script" id=3]
[ext_resource path="res://resources/city_drawing.jpg" type="Texture" id=4]
[ext_resource path="res://resources/Menu-Selection-sound.mp3" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
size = 72
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 42
font_data = ExtResource( 1 )

[node name="DificultadScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -1444.0
margin_top = -425.407
margin_right = 476.002
margin_bottom = 854.593
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxColor" type="Panel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -268.0
margin_right = 278.0
margin_bottom = 499.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -228.0
margin_top = 20.0
margin_right = 229.0
margin_bottom = 398.0
custom_constants/separation = 75
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_right = 457.0
margin_bottom = 328.0
custom_constants/separation = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DificultadTitle" type="Label" parent="VBoxContainer/VBoxContainer"]
margin_right = 457.0
margin_bottom = 85.0
custom_fonts/font = SubResource( 1 )
text = "Dificultad"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/VBoxContainer"]
margin_top = 110.0
margin_right = 457.0
margin_bottom = 166.0

[node name="FacilButton" type="Button" parent="VBoxContainer/VBoxContainer/CenterContainer"]
margin_left = 78.0
margin_right = 378.0
margin_bottom = 56.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = SubResource( 2 )
text = "1. Fácil"
align = 0

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer/VBoxContainer"]
margin_top = 191.0
margin_right = 457.0
margin_bottom = 247.0

[node name="NormalButton" type="Button" parent="VBoxContainer/VBoxContainer/CenterContainer2"]
margin_left = 78.0
margin_right = 378.0
margin_bottom = 56.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = SubResource( 2 )
text = "2. Normal"
align = 0

[node name="CenterContainer3" type="CenterContainer" parent="VBoxContainer/VBoxContainer"]
margin_top = 272.0
margin_right = 457.0
margin_bottom = 328.0

[node name="DificilButton" type="Button" parent="VBoxContainer/VBoxContainer/CenterContainer3"]
margin_left = 78.0
margin_right = 378.0
margin_bottom = 56.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = SubResource( 2 )
text = "3. Difícil"
align = 0

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 403.0
margin_right = 457.0
margin_bottom = 459.0

[node name="VolverAlMenuButton" type="Button" parent="VBoxContainer/CenterContainer"]
margin_left = 62.0
margin_right = 394.0
margin_bottom = 56.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = SubResource( 2 )
text = "4. Volver al menú"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectionSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="pressed" from="VBoxContainer/VBoxContainer/CenterContainer/FacilButton" to="." method="_on_FacilButton_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/CenterContainer2/NormalButton" to="." method="_on_NormalButton_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/CenterContainer3/DificilButton" to="." method="_on_DificilButton_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/VolverAlMenuButton" to="." method="_on_VolverAlMenu_pressed"]
[connection signal="finished" from="SelectionSound" to="." method="_on_SelectionSound_finished"]
